--- a/account/personal-info.html
+++ b/account/personal-info.html
@@ -983,7 +983,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="button__mt-24">
+                                    <div class="mt-6">
                                       <button type="button" class="btn-outline">
                                         Add another number
                                       </button>
@@ -4345,7 +4345,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="button__mt-24">
+                                        <div class="mt-6">
                                           <button
                                             type="button"
                                             class="btn-outline"
