--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -2044,7 +2044,7 @@
                                       More options
                                     </button>
                                   </p>
-                                  <div class="button__mt-24"></div>
+                                  <div class="mt-6"></div>
                                   <div
                                     id="airlock-inline-container"
                                     aria-live="polite"
@@ -5430,7 +5430,7 @@
                                     More options
                                   </button>
                                 </p>
-                                <div class="button__mt-24"></div>
+                                <div class="mt-6"></div>
                                 <div
                                   id="airlock-inline-container"
                                   aria-live="polite"
