--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -8919,7 +8919,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       <div class="_1lcxkbl"><span class="ll4r2nl dir dir-ltr">Cancel up to 7 days before the Experience
                           start time for a full refund, or within 24 hours of booking as long as the booking is made
                           more than 48 hours before the start time.</span></div>
-                      <div class="_1cvivhm"><a href="/help/article/1593/what-is-the-experiences-cancellation-policy"
+                      <div class="mt-6"><a href="/help/article/1593/what-is-the-experiences-cancellation-policy"
                           class="_1sikdxcl"><span
                             class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                               class=" dir dir-ltr">Show more</span><span class="atm_gz_1y44olf dir dir-ltr"><svg
@@ -11036,7 +11036,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                         class="c4wd1yj dir dir-ltr">Choose </span></a></div>
                                                                 </div>
                                                               </div>
-                                                              <div class="_1cvivhm">
+                                                              <div class="mt-6">
                                                                 <div class="_j54sqr">
                                                                   <div><a
                                                                       href="/book/experiences/create/3134396?guestCounts%5BnumberOfAdults%5D=1&amp;guestCounts%5BnumberOfChildren%5D=0&amp;guestCounts%5BnumberOfInfants%5D=0&amp;experienceId=3134396&amp;experienceListingAvailabilityId=48155570&amp;isExperiencesPrivateBooking=true&amp;bookingSource=PDP"
@@ -11149,7 +11149,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                       class="c4wd1yj dir dir-ltr">Choose </span></a></div>
                                                               </div>
                                                             </div>
-                                                            <div class="_1cvivhm">
+                                                            <div class="mt-6">
                                                               <div class="_j54sqr">
                                                                 <div><a
                                                                     href="/book/experiences/create/3134396?guestCounts%5BnumberOfAdults%5D=1&amp;guestCounts%5BnumberOfChildren%5D=0&amp;guestCounts%5BnumberOfInfants%5D=0&amp;experienceId=3134396&amp;experienceListingAvailabilityId=48155570&amp;isExperiencesPrivateBooking=true&amp;bookingSource=PDP"
