--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3008,7 +3008,7 @@
                                                   </section>
                                                 </div>
                                               </div>
-                                              <div class="_1cvivhm">
+                                              <div class="mt-6">
                                                 <div class="_ctz3yu">
                                                   <div class="relative">
                                                     <div class="_v0gz4uz"
@@ -3044,7 +3044,7 @@
                                                     ottomans.</div>
                                                 </div>
                                               </div>
-                                              <div class="_1cvivhm">
+                                              <div class="mt-6">
                                                 <div class="_ctz3yu">
                                                   <div class="relative">
                                                     <div class="_v0gz4uz"
@@ -3080,7 +3080,7 @@
                                                     and mass.</div>
                                                 </div>
                                               </div>
-                                              <div class="_1cvivhm">
+                                              <div class="mt-6">
                                                 <div class="_ctz3yu">
                                                   <div class="relative">
                                                     <div class="_v0gz4uz"
@@ -5212,7 +5212,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1cvivhm">
+                                                <div class="mt-6">
                                                   <div class="_1byskwn">
                                                     <div class="_162hp8xh">
                                                       <div class="_tpcbtl">
@@ -7170,7 +7170,7 @@
                                                   interiors honor… <button type="button" class="_15rpys7s">read
                                                     more</button></div>
                                               </div>
-                                              <div class="_1cvivhm">
+                                              <div class="mt-6">
                                                 <div><span class="_1vkitgc">Hospitality by</span><span><svg width="155"
                                                       height="11" fill="#010101" viewBox="0 0 155 11"
                                                       aria-label="Luxury Retreats" role="img">
@@ -12480,7 +12480,7 @@
                                                             charged yet
                                                           </li>
                                                         </ul>
-                                                        <div class="products-container__where-wrapper">
+                                                        <div class="mt-6">
                                                           <div class="_1wpjhdm" style="
                                                                 --pricing-guest-display-price-alignment: flex-start;
                                                                 --pricing-guest-display-price-flex-wrap: wrap;
@@ -15187,7 +15187,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1cvivhm">
+                                              <div class="mt-6">
                                                 <div class="_1byskwn">
                                                   <div class="_162hp8xh">
                                                     <div class="_tpcbtl">
