--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -2849,7 +2849,7 @@
                                                     </button>
                                                   </div>
                                                   <div
-                                                    class="products-container__where-wrapper"
+                                                    class="mt-6"
                                                   >
                                                     <div
                                                       class="account-container__menu-container"
