--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -1229,7 +1229,7 @@
                                                     </div>
                                                   </button>
                                                 </div>
-                                                <div class="products-container__where-wrapper">
+                                                <div class="mt-6">
                                                   <div class="account-container__menu-container">
                                                     <div class="_vd6w38n">
                                                       <div>
@@ -13139,7 +13139,7 @@
                                                 <img src="../assets/images/map-products.png" alt=""
                                                   class="max-w-full" />
                                               </div>
-                                              <div class="products-container__where-wrapper">
+                                              <div class="mt-6">
                                                 <div class="account-container__menu-container">
                                                   <div class="_vd6w38n">
                                                     <div>
