--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -1388,7 +1388,7 @@
                                                     </div>
                                                   </button>
                                                 </div>
-                                                <div class="products-container__where-wrapper">
+                                                <div class="mt-6">
                                                   <div class="account-container__menu-container">
                                                     <div class="_vd6w38n">
                                                       <div>
@@ -13589,7 +13589,7 @@
                                                             charged yet
                                                           </li>
                                                         </ul>
-                                                        <div class="products-container__where-wrapper">
+                                                        <div class="mt-6">
                                                           <div class="_1wpjhdm" style="
                                                                 --pricing-guest-display-price-alignment: flex-start;
                                                                 --pricing-guest-display-price-flex-wrap: wrap;
@@ -15098,7 +15098,7 @@
                                                 <img src="../assets/images/map-products.png" alt=""
                                                   class="max-w-full" />
                                               </div>
-                                              <div class="products-container__where-wrapper">
+                                              <div class="mt-6">
                                                 <div class="account-container__menu-container">
                                                   <div class="_vd6w38n">
                                                     <div>
