--- a/online-experience/calendar_agenda.html
+++ b/online-experience/calendar_agenda.html
@@ -4550,7 +4550,7 @@
                         <div class="main-content__details-form-private-textarea-overlay"></div>
                       </div>
                     </div>
-                    <div class="button__mt-24 sched-content-xl">
+                    <div class="mt-6 sched-content-xl">
                       <div class="main-content__details-button-wrapper">
                         <div class="main-content__details-cancel-button-wrapper">
                           <button type="button" class="btn-link-condensed">
