--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -314,7 +314,7 @@
                                               Keep track of all your payments
                                               and refunds.
                                             </div>
-                                            <div class="button__mt-24">
+                                            <div class="mt-6">
                                               <a
                                                 href="/account-settings/payments/your-payments"
                                                 class="btn-dark"
@@ -1087,7 +1087,7 @@
                                               Keep track of all your payments
                                               and refunds.
                                             </div>
-                                            <div class="button__mt-24">
+                                            <div class="mt-6">
                                               <a
                                                 href="/account-settings/payments/your-payments"
                                                 class="btn-dark"
