--- a/account/invite-friends.html
+++ b/account/invite-friends.html
@@ -166,7 +166,7 @@
                         <div class="_1izdtb0">0</div>
                       </div>
                     </div>
-                    <div class="products-container__where-wrapper">
+                    <div class="mt-6">
                       <button
                         type="button"
                         class="btn-light-outlined"
