--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3480,7 +3480,7 @@
             </div>
             <div class="_1g2tcap">
              <div class="_g6eb3r">
-              <div class="_1l8asbu">
+              <div class="mt-6">
                <div class="_13wkz77">
                 <label for="captionTextArea">
                  <div class="_1wgf3yo">Caption</div>
