--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4279,8 +4279,7 @@
                                                       style="display: inline-block; height: 100%; width: 100%;"><span
                                                         class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb atm_mk_h2mmj6 atm_e2p1ow_glywfm dir dir-ltr"
                                                         style="height: 100%; width: 100%;"></span></span></div>
-                                                  <div class="s1f23tw1 dir dir-ltr"
-                                                    style="--s1f23tw1-3: 40px; --s1f23tw1-4: 80px; --s1f23tw1-5: auto; --s1f23tw1-6: 24px; --s1f23tw1-7: absolute; --s1f23tw1-8: 1; --s1f23tw1-9: 122px;">
+                                                  <div>
                                                     <img src="../assets/images/villa-cetinale-gmap.png"
                                                       alt="Sovicille, Siena, Italy in google map">
                                                   </div>
@@ -14269,8 +14268,7 @@
                                                       class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb atm_mk_h2mmj6 atm_e2p1ow_glywfm dir dir-ltr"
                                                       style="height: 100%; width: 100%;"></span></span></div>
 
-                                                <div class="s1f23tw1 dir dir-ltr"
-                                                  style="--s1f23tw1-3: 40px; --s1f23tw1-4: 80px; --s1f23tw1-5: auto; --s1f23tw1-6: 24px; --s1f23tw1-7: absolute; --s1f23tw1-8: 1; --s1f23tw1-9: 122px;">
+                                                <div>
                                                   <img src="../assets/images/villa-cetinale-gmap.png"
                                                     alt="Sovicille, Siena, Italy in google map">
                                                 </div>
