--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11110,7 +11110,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div class="_14j6uun">
                                                         <div class="_1sox476">
                                                           <div class="_sdqx8w">
-                                                            <div id="privateBookingToggleTitle" class="_1p7iugi">Show
+                                                            <div id="privateBookingToggleTitle" class="font-extrabold">Show
                                                               only private group availability</div>
                                                             <div>Kat can host private groups of any size, up to 100
                                                               guests. Private group rates start at ₱4,704.</div>
