--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -5284,7 +5284,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1vk19cb"><button data-testid="location-modal-button"
+                                                <div class="mt-4"><button data-testid="location-modal-button"
                                                     type="button" class="_15rpys7s"><span
                                                       class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                         class=" dir dir-ltr">More about the location</span><span
@@ -15258,7 +15258,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1vk19cb"><button data-testid="location-modal-button"
+                                              <div class="mt-4"><button data-testid="location-modal-button"
                                                   type="button" class="_15rpys7s"><span
                                                     class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                       class=" dir dir-ltr">More about the location</span><span
