--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1008,7 +1008,7 @@
                                                         </div>
                                                       </div>
                                                     </div>
-                                                    <div class="_64pbdv">
+                                                    <div class="mt-4">
                                                       <div
                                                         class="flex-content-between"
                                                       >
@@ -1024,7 +1024,7 @@
                                                         </div>
                                                       </div>
                                                     </div>
-                                                    <div class="_64pbdv">
+                                                    <div class="mt-4">
                                                       <div
                                                         class="flex-content-between"
                                                       >
@@ -1570,7 +1570,7 @@
                                                         name="authenticity_token"
                                                         value="V4$.airbnb.com$Ey3PrgxWPhs$vbE5wHfHBS_JD7prRmUtEcry093GlSXmrYliwhYRX7E="
                                                       />
-                                                      <div class="_1vk19cb">
+                                                      <div class="mt-4">
                                                         <input
                                                           type="hidden"
                                                           name="from"
@@ -4511,7 +4511,7 @@
                                                 <div>
                                                   <div class="_4l12l8 hidden">
                                                     <div class="_88xxct">
-                                                      <div class="_64pbdv">
+                                                      <div class="mt-4">
                                                         <div class="_clw8y6">
                                                           <iframe
                                                             class="relative"
@@ -5090,7 +5090,7 @@
                                                           name="authenticity_token"
                                                           value="V4$.airbnb.com$Ey3PrgxWPhs$vbE5wHfHBS_JD7prRmUtEcry093GlSXmrYliwhYRX7E="
                                                         />
-                                                        <div class="_1vk19cb">
+                                                        <div class="mt-4">
                                                           <input
                                                             type="hidden"
                                                             name="from"
@@ -7830,7 +7830,7 @@
                           </div>
                         </label>
                       </div>
-                      <div class="_64pbdv">
+                      <div class="mt-4">
                         <button
                           disabled=""
                           type="submit"
@@ -7864,7 +7864,7 @@
                           </div>
                         </label>
                       </div>
-                      <div class="_64pbdv">
+                      <div class="mt-4">
                         <button type="submit" class="btn-dark-block">
                           Apply
                         </button>
@@ -11019,7 +11019,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                               d="m22.9375 16h-4.438v-3.001c0-1.266.62-2.499 2.607-2.499h2.018v-3.938s-1.831-.312-3.582-.312c-3.654 0-6.043 2.215-6.043 6.225v3.525h-4.06298v4.625h4.06298v11.375h5v-11.375h3.728z"
                               fill="#fff"></path>
                           </svg></span>Use Facebook photo</button>
-                      <div class="_1vk19cb"></div><span><input data-testid="file-input" class="hidden-file-input-with-label"
+                      <div class="mt-4"></div><span><input data-testid="file-input" class="hidden-file-input-with-label"
                           type="file" accept="image/*" name="image" role="button" hidden=""><button type="button"
                           class="_snbhip0"><span class="_8tbpu3" aria-hidden="true">󰔁</span> Upload a photo</button></span>
                     </div>
