--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6748,7 +6748,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           <form action="/authenticate" method="POST" novalidate="" data-testid="auth-form"><input type="hidden"
                                                               name="authenticity_token"
                                                               value="V4$.airbnb.com$G-m98cDk6MU$KYFxBemPbFY_z05QXZwXV3aFUFw2qn48al7bIcP4DC0=">
-                                                            <div class="_1vk19cb"><input type="hidden" name="from" value="email_login"><input type="hidden"
+                                                            <div class="mt-4"><input type="hidden" name="from" value="email_login"><input type="hidden"
                                                                 name="airlock_id" value="">
                                                               <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                                                                 <div class="_jro6t0">
@@ -11001,7 +11001,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
 
                                                       <!-- Show more dates mobile -->
                                                       <div class="_1f5fwtp">Contact Kat for dates and times not listed, or if you want to book for a larger group.<div
-                                                          class="_1vk19cb"><a
+                                                          class="mt-4"><a
                                                             href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=980d5071-b471-463d-8db8-77c0c27bf75e&amp;searchId=f9cea4e8-a387-4f32-8a6a-7fb61adec6e2&amp;sectionId=00d92247-d2bf-4f39-96ee-2fcdea1649a6&amp;source=p2&amp;modal=LEGACY_CONTACT_HOST&amp;adults=1&amp;modalItem=select_booking_type"
                                                             class="_1sikdxcl">Request availability</a></div>
                                                       </div>
@@ -11122,7 +11122,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         </div>
                                                       </div>
                                                       <div class="_1hmisy6">Contact Kat for dates and times not listed,
-                                                        or if you want to book for a larger group.<div class="_1vk19cb">
+                                                        or if you want to book for a larger group.<div class="mt-4">
                                                           <a href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=980d5071-b471-463d-8db8-77c0c27bf75e&amp;searchId=f9cea4e8-a387-4f32-8a6a-7fb61adec6e2&amp;sectionId=00d92247-d2bf-4f39-96ee-2fcdea1649a6&amp;source=p2&amp;modal=LEGACY_CONTACT_HOST&amp;modalItem=select_booking_type"
                                                             class="btn-dark">Request availability</a>
                                                         </div>
